<resources>
    <string name="app_name">MapExample</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_save">Save</string>
    <string name="tiet_name">Enter Name of New Coordinates</string>
    <string name="tiet_Lat">Enter Latitude</string>
    <string name="tiet_long">Enter Longitude</string>
    <string name="tv_title">Add New Coordinates</string>
    <string name="titem_AddCoor">Add Coordinates</string>
    <string name="titem_managecoordinates">Manage Coordinates</string>
    <string name="titem_searchingmap">Search Places</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_remove">Remove</string>
    <string name="tv_edittitle">Edit Coordinates</string>
    <string name="btn_show">Show in Map</string>
</resources>
